# eccgame

./: .env.development  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  LICENSE  README.md  index.html  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.ts
.github/workflows/: deploy-frontend.yml  preview-frontend.yml
CryptoGuesser/: asgi.py  settings.py  urls.py  wsgi.py
backend/: pyproject.toml  requirements.txt
backend/game/: admin.py  models.py  serializers.py  urls.py  views.py
backend/game/migrations/: 0001_initial.py  0002_alter_guess_submitted_key.py  0002_auto_20250516_0108.py  0003_alter_guess_submitted_key_and_more.py  0003_save.py  0004_rename_guess_to_solution.py
backend/game/tests/: test_integration.py  test_models.py  test_serializers.py  test_views.py
backend/project/: settings.py  urls.py
frontend/: .env.example  .env.production  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx  test-setup.ts
frontend/src/components/: AdvancedKeyEntry.css  AdvancedKeyEntry.tsx  ChallengeCard.css  ChallengeCard.tsx  ChallengeDisplay.css  ChallengeDisplay.tsx  ChallengeInfo.css  ChallengeInfo.tsx  ChallengeInfoPanel.css  ChallengeInfoPanel.tsx  CombinationWheel.css  CombinationWheel.tsx  DailyChallenge.tsx  DailyView.tsx  ECCCalculator.css  ECCCalculator.math.test.tsx  ECCCalculator.test.tsx  (+51 more)
public/: manifest.json
scripts/: collect_bitcoin_addresses.py  generate-icons.sh
scripts/bitcoin/: README.md  collect_bitcoin_addresses.py  collect_bitcoin_addresses_db.py  requirements.txt
src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx
src/components/: ChallengeInfo.css  ChallengeInfo.tsx  DailyChallenge.tsx  DailyView.tsx  ECCCalculator.css  ECCCalculator.math.test.tsx  ECCCalculator.private-key.test.tsx  ECCCalculator.test.tsx  ECCCalculator.tsx  ECCGraph.coordinates.test.tsx  ECCGraph.css  ECCGraph.mouse.test.tsx  ECCGraph.pan-limits.test.tsx  ECCGraph.test.tsx  ECCGraph.tsx  ECCGraph.visibility.test.tsx  ECCPlayground.css  ECCPlayground.private-key.test.tsx  ECCPlayground.tsx  ErrorBoundary.css  ErrorBoundary.test.tsx  ErrorState.test.tsx  ErrorState.tsx  GameFooter.tsx  GameHeader.tsx  HowToPlayModal.css  HowToPlayModal.test.tsx  HowToPlayModal.tsx  LoadingState.test.tsx  MobileNavDrawer.css  MobileNavDrawer.tsx  Modal.css  Modal.tsx  PlaceholderLayout.css  PlaceholderLayout.tsx  PointModal.css  PointModal.tsx  PracticeMode.css  PracticeMode.tsx  SavePointModal.css  (+7 more)
src/data/: challenges.json
src/hooks/: useDailyCalculatorRedux.ts  useGameStateRedux.ts  usePracticeCalculatorRedux.ts  usePracticeModeRedux.ts
src/integration/: HappyPath.test.tsx  multiChallengeVictory.test.tsx  selectedPointPersistence.test.tsx  stateBleeding.test.tsx  statePersistence.test.tsx
src/pages/: ECCGamePage.css  ECCGamePage.test.tsx  ECCGamePage.tsx  FAQPage.css  FAQPage.test.tsx  FAQPage.tsx  PrivacyPage.css  PrivacyPage.test.tsx  PrivacyPage.tsx
src/store/: hooks.ts
src/types/: ecc.ts  game.ts
src/utils/: adjacency-list-performance.test.ts  coordinateMapping.test.ts  coordinateMapping.ts  crypto.test.ts  crypto.ts  debug-propagation.test.ts  ecc.test.ts  ecc.ts  final-performance-comparison.test.ts  flamegraph-analysis.test.ts  gameUtils.test.ts  gameUtils.ts  graphCache.ts  graphOperations.intermediate-propagation.test.ts  graphOperations.test.ts  graphOperations.ts  mismatch-recovery.test.ts  operationBundling.test.ts  operationBundling.ts  optimized-graph-operations.ts  optimized-propagation.test.ts  performance-optimizations.test.ts  performance-profiling.test.ts  practiceMode.test.ts  private-key-optimization.test.ts  privateKeyCalculation.test.ts  privateKeyCalculation.ts  simple-profiler.ts  storage.ts  testUtils.ts  theme.test.ts  theme.ts  viewport.ts
(+90 files in other folders)
