[build-system]
requires = ["setuptools ~= 80.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto"
version = "0.1.0"
description = "ECC Crypto Playground"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "base58",
    "django",
    "django-cors-headers",
    "djangorestframework",
    "drf-nested-routers",
    "ecdsa",
    "sympy",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-django", "pytest-cov", "black", "isort", "flake8", "flake8-bugbear", "Flake8-pyproject", "pre-commit"]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["project"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-select = "B950"
extend-ignore = ["E203","E501","E701"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers --cov=game --cov-report=term-missing --cov-report=html --cov-report=xml"
DJANGO_SETTINGS_MODULE = "project.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.coverage.run]
source = ["game"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/admin.py",
    "*/apps.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
